// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`formatRouteDriveBudgetExhausted given: [case1] a spent ladder — every level terminal when: [t0] the halt is replayed with a reason that names a slug then: the whole replay is pinned, byte for byte 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .behavior/v2026_09_03.example
   │  └─ stone = 1.vision
   │
   └─ halted, peer reviewer budget exhausted
      ├─ reason: peer reviewer budget exhausted
      │
      ├─ reviews
      │   └─ r1: mech-rules (l1, 3/3)
      │       ├─ exhausted 🌙
      │       ├─ terminal — does not block higher levels
      │       ├─ 2 blockers 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.vision._.i003.r001._.given.by_peer.mech-rules.md
      │       └─ taken: .reviews/peer/1.vision._.i003.r001._.taken.by_self.mech-rules.md
      │
      ├─ spend your own lever first, then ask a human
      │  ├─ increase budget — yours to spend
      │  │  └─ rhx route.guard.budget --for review --add N --peer mech-rules --stone 1.vision
      │  │
      │  └─ approve as-is — a human must grant
      │     └─ rhx route.stone.set --stone 1.vision --as approved
      │
      └─ once a human grants the approval, run
         └─ rhx route.stone.set --stone 1.vision --as passed"
`;

exports[`formatRouteDriveBudgetExhausted given: [case1] a spent ladder — every level terminal when: [t1] the caller passes no reason then: the whole replay is pinned, byte for byte 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .behavior/v2026_09_03.example
   │  └─ stone = 1.vision
   │
   └─ halted, peer reviewer budget exhausted
      ├─ reason: peer reviewer budget exhausted
      │
      ├─ reviews
      │   └─ r1: mech-rules (l1, 3/3)
      │       ├─ exhausted 🌙
      │       ├─ terminal — does not block higher levels
      │       ├─ 2 blockers 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.vision._.i003.r001._.given.by_peer.mech-rules.md
      │       └─ taken: .reviews/peer/1.vision._.i003.r001._.taken.by_self.mech-rules.md
      │
      ├─ spend your own lever first, then ask a human
      │  ├─ increase budget — yours to spend
      │  │  └─ rhx route.guard.budget --for review --add N --stone 1.vision
      │  │
      │  └─ approve as-is — a human must grant
      │     └─ rhx route.stone.set --stone 1.vision --as approved
      │
      └─ once a human grants the approval, run
         └─ rhx route.stone.set --stone 1.vision --as passed"
`;

exports[`formatRouteDriveBudgetExhausted given: [case1] a spent ladder — every level terminal when: [t2] the meter set is empty then: the whole replay is pinned, byte for byte 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .behavior/v2026_09_03.example
   │  └─ stone = 1.vision
   │
   └─ halted, peer reviewer budget exhausted
      ├─ reason: peer reviewer budget exhausted
      │
      ├─ spend your own lever first, then ask a human
      │  ├─ increase budget — yours to spend
      │  │  └─ rhx route.guard.budget --for review --add N --stone 1.vision
      │  │
      │  └─ approve as-is — a human must grant
      │     └─ rhx route.stone.set --stone 1.vision --as approved
      │
      └─ once a human grants the approval, run
         └─ rhx route.stone.set --stone 1.vision --as passed"
`;

exports[`formatRouteDriveBudgetExhausted given: [case2] a lower level is spent but a HIGHER level is live again when: [t0] the halt is replayed then: the whole replay is pinned, byte for byte 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .behavior/v2026_09_03.example
   │  └─ stone = 1.vision
   │
   └─ reviews
      ├─ r1: mech-rules (l1, 3/3)
      │   ├─ exhausted 🌙
      │   ├─ terminal — does not block higher levels
      │   ├─ 2 blockers 🔴
      │   ├─ 0 nitpicks ✓
      │   ├─ given: .reviews/peer/1.vision._.i003.r001._.given.by_peer.mech-rules.md
      │   └─ taken: .reviews/peer/1.vision._.i003.r001._.taken.by_self.mech-rules.md
      └─ r2: ergo-rules (l2, 1/3)
          ├─ rejected
          ├─ 1 blocker 🔴
          ├─ 0 nitpicks ✓
          ├─ given: .reviews/peer/1.vision._.i003.r002._.given.by_peer.ergo-rules.md
          └─ taken: .reviews/peer/1.vision._.i003.r002._.taken.by_self.ergo-rules.md

🪷 the path continues
   ├─ l1 is terminal (exhausted 🌙) — it no longer blocks you
   ├─ l2 has engaged — address its blockers, then:
   │  └─ rhx route.stone.set --stone 1.vision --as arrived
   └─ a human is only needed once every level is terminal"
`;

exports[`formatRouteDriveMixedHalt given: [case1] a malfunction that broke in the same pass a level spent when: [t0] the halt is replayed then: the whole replay is pinned, byte for byte 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .behavior/v2026_09_03.example
   │  └─ stone = 1.vision
   │
   └─ halted, reviewer or judge malfunctioned; peer reviewer budget exhausted: mech-rules
      ├─ reviews
      │   └─ r1: mech-rules (l1, 3/3)
      │       ├─ exhausted 🌙
      │       ├─ terminal — does not block higher levels
      │       ├─ 2 blockers 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.vision._.i003.r001._.given.by_peer.mech-rules.md
      │       └─ taken: .reviews/peer/1.vision._.i003.r001._.taken.by_self.mech-rules.md
      │
      └─ spend your own lever first, then ask a human
         ├─ increase budget — yours to spend
         │  └─ rhx route.guard.budget --for review --add N --peer mech-rules --stone 1.vision
         │
         ├─ overrule the malfunction — a human must grant
         │  └─ rhx route.stone.set --stone 1.vision --as overruled
         │
         └─ approve as-is — a human must grant
            └─ rhx route.stone.set --stone 1.vision --as approved"
`;

exports[`formatRouteDriveMixedHalt given: [case1] a malfunction that broke in the same pass a level spent when: [t1] the reason names a constraint rather than a malfunction then: the whole replay is pinned, byte for byte 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .behavior/v2026_09_03.example
   │  └─ stone = 1.vision
   │
   └─ halted, a reviewer hit a constraint; peer reviewer budget exhausted: mech-rules
      ├─ reviews
      │   └─ r1: mech-rules (l1, 3/3)
      │       ├─ exhausted 🌙
      │       ├─ terminal — does not block higher levels
      │       ├─ 2 blockers 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.vision._.i003.r001._.given.by_peer.mech-rules.md
      │       └─ taken: .reviews/peer/1.vision._.i003.r001._.taken.by_self.mech-rules.md
      │
      └─ spend your own lever first, then ask a human
         ├─ increase budget — yours to spend
         │  └─ rhx route.guard.budget --for review --add N --peer mech-rules --stone 1.vision
         │
         ├─ overrule the constraint — a human must grant
         │  └─ rhx route.stone.set --stone 1.vision --as overruled
         │
         └─ approve as-is — a human must grant
            └─ rhx route.stone.set --stone 1.vision --as approved"
`;

exports[`formatRouteDriveMixedHalt given: [case1] a malfunction that broke in the same pass a level spent when: [t2] the meter set is empty then: the whole replay is pinned, byte for byte 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .behavior/v2026_09_03.example
   │  └─ stone = 1.vision
   │
   └─ halted, reviewer or judge malfunctioned; peer reviewer budget exhausted
      └─ spend your own lever first, then ask a human
         ├─ increase budget — yours to spend
         │  └─ rhx route.guard.budget --for review --add N --stone 1.vision
         │
         ├─ overrule the malfunction — a human must grant
         │  └─ rhx route.stone.set --stone 1.vision --as overruled
         │
         └─ approve as-is — a human must grant
            └─ rhx route.stone.set --stone 1.vision --as approved"
`;
